tests/baselines/reference/ClassDeclaration8.errors.txt
==== tests/cases/compiler/ClassDeclaration8.ts (1 errors) ====
    class C {
      constructor();
      ~~~~~~~~~~~
!!! ClassDeclaration8.ts(2,3): error TS2240: Constructor implementation expected.
    }